--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.0
 
+  # networking client
+  http: ^0.13.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
